--- a/templates/staff_templates/all_reservations.html
+++ b/templates/staff_templates/all_reservations.html
@@ -3,6 +3,9 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-10">
+            <div class="d-flex justify-content-end mb-3">
+                <a href="{% url 'reservations' %}" class="btn add-reservation-btn">Add Reservation</a>
+            </div>
             <div class="card mt-4 shadow">
                 <div class="reservation-card-header" id="todays-reservations-heading">
                     <h5 class="mb-0 text-center">
