--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -300,3 +300,7 @@
         </div>
     </div>
 </div>
+
+<script async src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_key }}&callback=initMap"></script>
+<script src="{% static 'js/maps.js' %}"></script>
+<script src="{%static 'js/delete_menu_item.js'%}"></script>
