Added settings for emails

--- a/templates/password_change_form.html
+++ b/templates/password_change_form.html
@@ -1,10 +1,15 @@
-{% extends "base.html"%}
+{% extends "base.html" %}
 
-{%block content%}
-<h2>Change Password</h2>
-<form method="POST">
-    {%csrf_token%}
-    {{form.as_p}}
-    <button type="submit">Change Password</button>
-</form>
-{% endblock%}
+{% block content %}
+<div class="container change-password-container mt-5">
+    <h2 class="change-password-title">Change Password</h2>
+    <h3>This is the password change form</h3>
+    <div class="change-password">
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-responsive change-password-btn" type="submit">Change Password</button>
+        </form>
+    </div>
+</div>
+{% endblock %}
