--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -147,7 +147,7 @@
             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                 data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">
-                    <img src="{% static 'images/staff_3.jpg' %}" class="img-fluid mb-3 accordion-img"
+                    <img src="{% static 'images/single_table.jpg' %}" class="img-fluid mb-3 accordion-img"
                         alt="Exceptional Service">
                     Our staff is dedicated to providing exceptional service to every guest, making your dining
                     experience memorable and enjoyable.
@@ -191,18 +191,23 @@
     <div class="row">
         <div class="col-md-4">
             <div class="card text-center">
-                <img src="{% static 'images/dinner_3.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">About Us</h5>
-                    <p class="card-text">Learn more about our story and our commitment to great food.</p>
-                    <a href="{% url 'about' %}" class="btn homepage-btn-primary">About Us</a>
+                <img src="{% static 'images/front_2.jpg' %}" class="card-img-top" alt="...">
+                <div class="link-card-body">
+                    <h5 class="card-title">Our Restaurant</h5>
+                    <p class="card-text">
+                        123 Phoenix Park, Dublin<br>
+                        ourrestaurantproject2<br>@gmail.com<br>
+                        +353 1 234 5678
+                    </p>
+                    <a href="{% url 'about' %}" class="btn homepage-btn-primary mt-auto">About Us</a>
                 </div>
             </div>
         </div>
+
         <div class="col-md-4">
             <div class="card text-center">
                 <img src="{% static 'images/menu.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="link-card-body">
                     <h5 class="card-title">Our Menu</h5>
                     <p class="card-text">Discover our delicious menu full of mouth-watering dishes.</p>
                     <a href="{% url 'menu' %}" class="btn homepage-btn-primary">Menu</a>
@@ -211,8 +216,8 @@
         </div>
         <div class="col-md-4">
             <div class="card text-center">
-                <img src="{% static 'images/single_table.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
+                <img src="{% static 'images/dinner_3.jpg'  %}" class="card-img-top" alt="...">
+                <div class="link-card-body">
                     <h5 class="card-title">Reservations</h5>
                     <p class="card-text">Book a table for a memorable dining experience.</p>
                     {% if user.is_authenticated %}
