--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -82,14 +82,14 @@
 
 <!-- Menu Highlights -->
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Menu Specials&emsp; <i class="fa-solid fa-utensils"></i></h2>
+    <h2 class="text-center mb-4">Award Winning Food&emsp; <i class="fa-solid fa-utensils"></i></h2>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
             <div class="card h-100">
                 <img src="{% static 'images/dinner_1.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Dish 1</h5>
-                    <p class="card-text">Description of this speciality.</p>
+                    <h5 class="card-title">The Tuesday Post</h5>
+                    <p class="card-text"><em>...Out of this world!</em></p>
                 </div>
             </div>
         </div>
@@ -97,8 +97,8 @@
             <div class="card h-100">
                 <img src="{% static 'images/dinner_3.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Dish 2</h5>
-                    <p class="card-text">Description of this speciality..</p>
+                    <h5 class="card-title">The Sunday Days</h5>
+                    <p class="card-text"><em>...You have to try the Ravioli!</em></p>
                 </div>
             </div>
         </div>
@@ -106,8 +106,8 @@
             <div class="card h-100">
                 <img src="{% static 'images/dinner_2.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Dish 3</h5>
-                    <p class="card-text">Description of this speciality.</p>
+                    <h5 class="card-title">The Irish Reflection</h5>
+                    <p class="card-text"><em>...The finest dining in Dublin</em></p>
                 </div>
             </div>
         </div>
