--- a/templates/staff_templates/all_reservations.html
+++ b/templates/staff_templates/all_reservations.html
@@ -6,7 +6,7 @@
             <div class="d-flex justify-content-end mb-3">
                 <a href="{% url 'reservations' %}" class="btn add-reservation-btn">Add Reservation</a>
             </div>
-            <div class="card mt-4 shadow">
+            <div class="staff-booking-card mt-4 shadow">
                 <div class="reservation-card-header" id="todays-reservations-heading">
                     <h5 class="mb-0 text-center">
                         <button class="btn btn-link reservation-btn " data-bs-toggle="collapse"
@@ -23,7 +23,7 @@
                 </div>
             </div>
 
-            <div class="card mt-4 shadow">
+            <div class="staff-booking-card mt-4 shadow">
                 <div class="reservation-card-header" id="future-reservations-heading">
                     <h5 class="mb-0 text-center">
                         <button class="btn btn-link reservation-btn" data-bs-toggle="collapse"
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <div class="card mt-4 shadow">
+            <div class="staff-booking-card last-card mt-4 shadow">
                 <div class="reservation-card-header" id="past-reservations-heading">
                     <h5 class="mb-0 text-center">
                         <button class="btn btn-link reservation-btn" data-bs-toggle="collapse"
